# incubator-kie-optaplanner

./: .gitignore  LICENSE-PROPRIETARY.md  README.md  findings.md  flake.nix  progress.md  server_crash.txt  server_crash_4.txt  server_crash_5.txt  server_crash_log.txt  server_crash_log_2.txt  server_crash_log_3.txt  server_log.txt  task_plan.md
.direnv/: flake-profile-1-link
.pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
cahiers_des_charges_experts/: 01_Expert_Java_GraalVM.md  01_Response_Java_GraalVM.md  02_Expert_Rust_SIMD.md  02_Response_Rust_SIMD.md  03_Expert_Elixir_OTP.md  03_Response_Elixir_OTP.md  04_Expert_IA_GPU.md  04_Response_IA_GPU.md  05_Expert_WASM_Cloud.md  05_Response_WASM_Cloud.md  06_Business_Ferroviaire.md  06_Response_Business_Ferroviaire.md  07_Business_Manufacturing_JIT.md  07_Response_Business_Manufacturing_JIT.md  08_Business_Simulation_SOP.md  08_Response_Business_Simulation_SOP.md  09_Business_Human_Resources.md  09_Response_Business_Human_Resources.md  10_Business_Explicabilite_BI.md  10_Response_Business_Explicabilite_BI.md  11_Manager_Program_Director.md  11_Response_Manager_Program_Director.md  12_Manager_Agile_Delivery.md  12_Response_Manager_Agile_Delivery.md  13_Manager_QA_Testing.md  13_Response_Manager_QA_Testing.md  14_Manager_DevOps_FinOps.md  14_Response_Manager_DevOps_FinOps.md  15_Manager_DevEx_Culture.md  15_Response_Manager_DevEx_Culture.md  16_Expert_Code_Quality_Best_Practices.md  16_Response_Expert_Code_Quality_Best_Practices.md  17_Expert_LLM_Modern_Dev.md  17_Response_Expert_LLM_Modern_Dev.md  18_Expert_Security_AppSec.md  18_Response_Expert_Security_AppSec.md  19_Master_Architecture_Document.md  20_Delta_Report.md  (+4 more)
hexaplanner/native/hexa_solver/: Cargo.toml  README.md
hexaplanner/native/hexa_solver/src/: domain.rs  dummy.rs  generated_score.rs  incremental_score.rs  lib.rs  score.rs  solver.rs  topology.rs
hexarail/native/hexacore_engine/: Cargo.toml  README.md
hexarail/native/hexacore_engine/src/: domain.rs  lib.rs  railway_nif.rs  railway_topology_tests.rs  score.rs  solver.rs  topology.rs
hexarail/native/hexacore_logic/: Cargo.toml
hexarail/native/hexacore_logic/src/: domain.rs  gnn.rs  incremental_score.rs  lib.rs  nco.rs  score.rs  solver.rs
hexarail/native/hexarail_engine/: Cargo.toml
hexarail/native/hexarail_engine/src/: lib.rs  railway_domain.rs  railway_domain_tests.rs  railway_nif.rs  railway_topology.rs
(+1057 files in other folders)
