# Copyright (c) Didier Stadelmann. All rights reserved.

[package]
name = "hexacore_engine"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "hexacore_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
hexacore_logic = { path = "../hexacore_logic" }
rustler = "=0.35.0"
