# Copyright (c) Didier Stadelmann. All rights reserved.

[package]
name = "hexacore_logic"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "hexacore_logic"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
rustler = "=0.35.0"
rayon = "=1.11.0"
localsearch = "=0.24.0" # State-of-the-art for parallel Tabu Search & Simulated Annealing
metaheuristics-nature = "=0.16.0" # For Genetic Algorithms & Swarm
salsa = "0.16.1"
petgraph = { version = "0.6.5", features = ["serde-1"] }
lasso = "0.7.3"
rdst = "0.20.14"
kdtree = "0.8.0"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
liblrs = "0.1.0"
glam = "0.29.2"
rmp-serde = "1.3.0"
candle-core = "0.10.2"
candle-nn = "0.10.2"
