# Copyright (c) Didier Stadelmann. All rights reserved.

[package]
name = "hexarail_engine"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "hexarail_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
hexacore_engine = { path = "../hexacore_engine", default-features = false }
rustler = "=0.35.0"
rayon = "=1.11.0"
petgraph = { version = "0.6.5", features = ["serde-1"] }
lasso = "0.7.3"
kdtree = "0.8.0"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
liblrs = "0.1.0"
glam = "0.29.2"
rmp-serde = "1.3.0"
